2004-11-07  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* BinaryOp.cs: added constructor for instantiating derived classes.
	* BitwiseBinary.cs, Equality.cs, In.cs, InstanceOf.cs,
	NumericBinary.cs, Plus.cs, Relational.cs, StrictEquality.cs,
	expression.cs (classes Binary, Assign): use inherited constructor. 
	* BitwiseBinary.cs, Equality.cs: deleted public constructor which carried the context.	

2004-10-25  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* StringObject.cs: add value field

	* expression.cs: implement LateBinding. Added methods:
	emit_late_binding, init_late_binding, emit_late_get_or_set,
	get_global_scope_or_this, setup_late_call_args, load_script_func, emit_late_call
	* Convert.cs: implement CheckIfDoubleIsInteger and CheckIfSingleIsInteger

2004-10-20  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* ast.cs (Function): added method emit_return_local_field, if
	there's a return stm inside a function we must allocate a
	JSLocalField indicating the return type of the function.
	* FunctionDeclaration.cs, FunctionExpression.cs: generate the
	extra JSLocalField if needed

2004-10-19  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* Parser.cs: set the operator properly.

2004-10-11  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* GlobalObject.cs: ported encodeURI, encodeURIComponent,
	decodeURI, decodeURIComponent from Rhino's codebase. Added methods encode and decode.
	
	* expression.cs (Call.Emit): implement IsConstructorProperty.

2004-10-06  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* expression.cs: added support for function calls. Handle case of
	print where no args are supplied.	

2004-10-05  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* ast.cs: added GetContainerFunction property.
	* Statement.cs: added class NotVoidReturnEventArgs and delegate
	NotVoidReturnEventHandler, throw an event in case we find a
	return, the enclosing function object takes care of changing the
	return type of the function.